# job-watch-pm

./: .gitignore  README.md  pyproject.toml
.github/workflows/: job-watch.yml  source-health.yml
config/: companies.toml  expansion_candidates.toml  settings.toml
scripts/: build_status_dashboard.py
src/job_watch/: __init__.py  cli.py  config.py  constants.py  dashboard.py  logging_utils.py  matching.py  models.py  registry.py  service.py  sheets.py  source_policy.py  time_utils.py
src/job_watch/adapters/: __init__.py  ashby.py  base.py  first_party.py  greenhouse.py  lever.py  smartrecruiters.py  workday.py
tests/: test_adapters.py  test_catalog.py  test_cli.py  test_config.py  test_dashboard.py  test_expansion_manifest.py  test_first_party_adapters.py  test_live_sources.py  test_matching.py  test_service.py  test_source_policy.py  test_tracker.py
tests/fixtures/: ashby.json  greenhouse.json  lever.json  smartrecruiters.json  workday.json
